--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: NothingAmazing Blog
+title: 没什么了不起
 SEOTitle: 没什么了不起的博客 | NothingAmazing Blog
 header-img: img/home-bg.jpg
 email: pis.nothingamazing@gmail.com
